--- a/ERP/Core.Erp.Web/Areas/Banco/Views/CatalogoBanco/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/CatalogoBanco/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Banco.ba_Catalogo_Info
 @{
     ViewBag.Title = "Consulta de catálogos de banco";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,9 +10,9 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-
-    @Html.Action("GridViewPartial_catalogo_banco", new { IdTipoCatalogo = ViewBag.IdTipoCatalogo })
+    @Html.Action("GridViewPartial_catalogo_banco", new { Nuevo = ViewBag.Nuevo, IdTipoCatalogo = ViewBag.IdTipoCatalogo })
 
 
     <div class="box-footer">
