--- a/ERP/Core.Erp.Web/Areas/Banco/Views/CatalogoTipoBanco/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/CatalogoTipoBanco/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Banco.ba_CatalogoTipo_Info
 @{
     ViewBag.Title = "Consulta de tipos de catálogos de banco";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,6 +10,8 @@
 
 @using (Html.BeginForm())
 {
-    @Html.Action("GridViewPartial_catalogotipo_banco")
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
+    @Html.Action("GridViewPartial_catalogotipo_banco", new { Nuevo = ViewBag.Nuevo })
     
 }
